# pal_person_detector_opencv

./: CMakeLists.txt  package.xml
include/: person_detector.h
launch/: detector.launch  person_follower.launch
src/: person_detector.cpp  tiago_move.cpp
